2007-02-20 15:08 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.14 Release. Tag before FAKEGeom reimplementation.

2007-02-12 10:05 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelswap_) skip gridRemoveTwoFaceCell for
	cut cell and frozen boundary layer cases, to see if it causes parallel
	global cell mis-counts.

2006-12-08  5:00 Mike Park & Karen Bibb  <mike.park@nasa.gov> <karen.l.bibb@nasa.gov>
	
	* src/FAUXGeom.c, created a first cut at a generalized FAKEGeom, such
	  that the user only has to provide an input file with basic info
	  about the surfaces to be refined with fake geometry.

2006-12-08  13:30 Mike Park  <mike.park@nasa.gov>

	* added conditional to headers for Mac OSX.4, need float.h, not value.h

2006-11-08  8:08 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridExportFASTSurface) export surface grid to FAST.

2006-09-28  8:16 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotVolumeGeom) tecplot entire volume.

2006-09-07 16:15 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridExportGRI) to provide path to PX grid format

2006-09-06 11:53 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridTranslate) to uniformly shift all nodes

2006-08-31 11:18 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotGeomFaceXYZ) single face tecplot geometry.

2006-08-15 18:12 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindConn) added to find a conn with two nodes.

2006-08-04 13:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) added zone title argument.
	* src/grid.c (gridWriteTecplotGeomFaceUV) name zone with face id.

2006-08-04 12:50 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) calls gridWriteTecplotGeomFaceUV
	to dump tecplot if min cost is less than -1.5.

2006-08-04 12:42 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridTrianglesOnFaceId) to count triangles in a CAD face.

2006-07-05 14:22 Mike Park  <mike.park@nasa.gov>
