@@ -1,3 +1,7 @@
+2007-02-20  16:15 Mike Park  <mike.park@nasa.gov>
+	
+	* src/FAUXGeom.c (initialize_faux) improved error handling.
+
 2007-02-20 15:08 Mike Park  <mike.park@nasa.gov>
 
 	* Made 1.2.14 Release. Tag before FAKEGeom reimplementation.
